# trend-setter

./: .env.example  .gitignore  AGENTS.md  README.md  main.py  pyproject.toml
tests/: test_brief.py  test_config.py  test_filter.py  test_google_trends.py  test_pipeline.py  test_scheduler.py  test_trends.py  test_tts.py  test_video_generation.py
trend_setter/: __init__.py  config.py  pipeline.py  report.py  scheduler.py
trend_setter/generation/: __init__.py  brief.py  tts.py  video.py
trend_setter/posting/: __init__.py  instagram.py
trend_setter/research/: perplexity.py  wikipedia.py
trend_setter/trends/: __init__.py  aggregator.py  filter.py  google_trends.py  newsapi.py  newsdataio.py  reddit.py  tiktok.py  youtube.py
