[project]
name = "trend-setter"
version = "0.1.0"
description = "Multi-source trend monitor that generates AI videos and posts them to Instagram Reels."
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
dependencies = [
    "google-generativeai>=0.8.0",
    "google-api-python-client>=2.130.0",
    "pytrends>=4.9.2",
    "httpx>=0.27.0",
    "apscheduler>=3.10",
    "pydantic-settings>=2.7.0",
    "python-dotenv>=1.0.1",
    "openai>=1.0.0",
    "moviepy>=1.0.3,<2.0.0",
    "ffmpeg-python>=0.2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2.0",
    "pytest-asyncio>=0.23.7",
    "ruff>=0.5.0",
    "black>=24.4.2",
]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["trend_setter*"]

[tool.black]
line-length = 88
target-version = ["py312"]

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
